# misteryou_solutions

crypto100/: #hack.py#
crypto200/: hack.py  key
crypto200/crank-0.2.1/: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  libtool
crypto200/crank-0.2.1/data/: Makefile  Makefile.am  Makefile.in
crypto200/crank-0.2.1/doc/: Makefile  Makefile.am  Makefile.in  crank.info  crank.texi
crypto200/crank-0.2.1/patch/: Makefile  Makefile.am  Makefile.in  std_monoalphabetic.scm
crypto200/crank-0.2.1/pixmaps/: Makefile  Makefile.am  Makefile.in  arrows_ver.xpm  gear_small.xpm  open.xpm  save.xpm
crypto200/crank-0.2.1/src/: Makefile  Makefile.am  Makefile.in  common_constraint_parse.c  common_constraint_parse.h  common_monoalphabetic.c  common_monoalphabetic.h  common_transposition_grid.c  common_transposition_grid.h  common_trigram.c  common_trigram.h  componant.c  componant.h  crank.glade  crank.h  crank.i  crank_wrap.c  error.h  files.c  files.h  fitness_trigram.c  globals.c  globals.h  gui_callbacks.c  gui_callbacks.h  gui_generic.c  gui_generic_callbacks.c  gui_generic_callbacks.h  gui_generic_interface.c  gui_generic_interface.h  gui_globals.c  gui_globals.h  gui_init.c  gui_init.h  gui_interface.c  gui_interface.h  gui_support.c  gui_textarea.c  gui_textarea.h  heuristic_hillclimbing.c  (+17 more)
crypto200/crank-0.2.1/src/scheme/: Makefile  Makefile.am  Makefile.in  crank.scm
crypto300/: _flag.txt  cry300.py  cry300.py~  hack.py  hack.py~  hack2.py  hack2.py~
epicarc/: .#ctf2.c  ctf.py  ctf.py~  ctf2-sniff.pcapng  ctf2.c  ctf2.id0  ctf2.id1  ctf2.nam  epicark100.pcap  epicark200  epicark300  final  part1  part2  part3
ppc100/: hack.py~
ppc200/: README.txt  formgrabber_report_08_10_2012.txt  index.php  keylogger_report_08_10_2012.txt  md52.js  parse.py  pass.txt  solve  solve.c  solve.c~
ppc300/: factor.out  factor.py  factor.py~  factoringcalculator.php?function=343243243243243243243243243243243243  hack.py  hack.py~  numberfactorizer.php?number=322  ocr.tif  out.txt  out.txt.txt
ppc300/factmsieve/: factmsieve.py
rev100/: opensawce.c  opensawce.c~
rev200/: task2.bin.idb  task2.bin.new  task2.idb
rev300/: rev.py  rev.py~  task3.c  task3.idb  upxAV2WSSQAUCX  upxAV2WSSQAUCX.bak  upxAV2WSSQAUCX.c  upxAV2WSSQAUCX.c~  upxAV2WSSQAUCX.idb
steg200/: hack.py  hack.py~  lol  stg2.zlib  stg200.tif
steg300/: .#hack.py
web100/: #cond.py#  cond.py
web300/: cleaned.php  cleaned.php~  hack.py  index.php.txt
